Prevent java.lang.OutOfMemoryError: PermGen space from happening during compile